# reference

./: BUILD  LICENSE  WORKSPACE  go.mod
demo/: BUILD.bazel  demo.go
main/: BUILD.bazel  main.go
pbdemo/: BUILD  pbdemo.proto
rpcdemo/: BUILD.bazel  rpcdemo.proto
