load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "rpcdemo_proto",
    srcs = ["rpcdemo.proto"],
    visibility = ["//visibility:public"],
    deps = ["//github.com/glenntrewitt/reference/pbdemo:pbdemo_proto"],
)

go_proto_library(
    name = "rpcdemo_go_proto",
    importpath = "github.com/glenntrewitt/reference/rpcdemo",
    proto = ":rpcdemo_proto",
    visibility = ["//visibility:public"],
    deps = ["//github.com/glenntrewitt/reference/pbdemo:pbdemo_proto"],
)

go_library(
    name = "rpcdemo",
    embed = [":rpcdemo_go_proto"],
    importpath = "github.com/glenntrewitt/reference/rpcdemo",
    visibility = ["//visibility:public"],
)
